--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "sequelize": "^6.37.5"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.7",
     "nodemon": "^3.1.7",
     "sequelize-cli": "^6.6.2"
   }
