--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
   "description": "",
   "dependencies": {
     "bcrypt": "^5.1.1",
-    "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
@@ -22,10 +21,7 @@
     "sequelize": "^6.37.5"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.2",
-    "@types/express": "^5.0.0",
-    "@types/jsonwebtoken": "^9.0.7",
-    "nodemon": "^3.1.7",
-    "sequelize-cli": "^6.6.2"
+    "nodemailer": "^6.9.16",
+    "nodemon": "^3.1.7"
   }
 }
